--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://txia.ca"
-title = "txia23"
+title = "Tian Xia"
 theme = "etch"
 languageCode = "en-US"
 enableInlineShortcodes = true
